# sw5e

./: .editorconfig  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/sw5e/: Cargo.toml
crates/sw5e/src/: lib.rs  proficency.rs
crates/sw5e_phb/: Cargo.toml
