[package]
name = "sw5e_phb"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "The Star Wars 5e Player's Handbook."
documentation = "https://seancroach.github.io/sw5e/sw5e_phb/index.html"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = []
categories = []
publish.workspace = true
